--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript"></script>
   <script src="js/raphael-min.js" type="text/javascript"></script>
   <script src="js/plotset.js" type="text/javascript"></script>
-  <script src="js/num2pcs.js" type="text/javascript"></script>
+  <script src="js/pcstr2pcs.js" type="text/javascript"></script>
   <script>
   </script>
   <script type="text/javascript">
