--- a/index.html
+++ b/index.html
@@ -31,24 +31,22 @@
   </div>
   <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript"></script>
   <script src="js/raphael-min.js" type="text/javascript"></script>
-  <script src="js/plotset.js" type="text/javascript"></script>
+  <script src="js/setgraph.js" type="text/javascript"></script>
   <script src="js/pcstr2pcs.js" type="text/javascript"></script>
   <script>
   </script>
   <script type="text/javascript">
-    var canvasopts = {
-      'radius': 140,
-      'pad': 20
-    }
     var pcset = {
       'mod': 12,
       'pcs': []
     }
+    var sg = setGraph('canvas_container');
     function engage() { 
       $('#canvas_container').remove('canvas');
       var pcstr = $("#pcs").val();
       pcset.pcs = pcstr2pcs(pcset.mod, pcstr);
-      plotset('canvas_container', pcset, canvasopts);
+      sg.configure(pcset);
+      sg.drawset();
     }
     $(document).ready(function () {
       engage();
