--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body>
+  <a href="https://github.com/jsgoyette"><img style="position: absolute;top: 0;right: 0;border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
   <div class="container">
     <h2>plot-pc-set.js</h2>
     <div class="row">
