added Tn and In labels

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </div>
         <div class="well">
           <form id="tnform">
-            <label>Transpose</label>
+            <label>Transpose - T<sub>n</sub></label>
             <input type="text" id="tn" class="span1" value="3"><br>
             <button id="transbutton" class="btn">Transpose</button>
           </form>
         </div>
         <div class="well">
           <form id="invform">
-            <label>Invert</label>
+            <label>Invert at index - I<sub>n</sub></label>
             <input type="text" id="in" class="span1" value="10"><br>
             <button id="invbutton" class="btn">Invert</button>
           </form>
