set intervals to variable 'animists'; other small edits

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       var pcstr = $("#pcs").val();
       // convert string to array
       var pcs = pcstr2pcs(12, pcstr);
-      // plot the pcs (the first being fixed)
+      // plot the pcs (the first of which is fixed)
       sg.plotpcs(pcs, 1);
     }
 
