--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       var fixed = $("#fixed").val();
       // convert string to array
       var pcs = pcstr2pcs(12, pcstr);
-      // plot the pcs (the first of which is fixed)
+      // plot the pcs (the first of which are fixed)
       sg.plotpcs(pcs, +fixed);
     }
 
